# ags-andrew-dashboard

./: .gitignore  README.md  copa_2022_dashboard.py  pyproject.toml  render.yaml  requirements.txt  streamlit_app.py
app/: main.py
app/api/: admin_sync_routes.py  brasileirao_routes.py  brasileirao_xg_routes.py  routes.py  sofascore_routes.py  sofascore_xg_routes.py  statsbomb_routes.py  statsbomb_routes_backup.py
app/cli/: download_image.py  fetch_player.py
app/fetchers/: extractor.py  sofascore.py
app/frontend/: brasileirao.html  comparativo.html  copa2022.html  copa2022_backup.html  copa2022_backup_organizado.html  copa2026.html  index.html
app/infra/: database.py  persist.py
app/services/: ingest_statsbomb.py  ingest_statsbomb_events.py  plotter.py
app/tests/: conftest.py  test_database.py
data/: brasileirao_sofascore_xg.db  fbref_brasileirao.db  sofascore_xg.db
data/parquet/: brasileirao_2026_opponent_shooting.parquet  brasileirao_2026_player_shooting.parquet  brasileirao_2026_player_standard.parquet  brasileirao_2026_schedule.parquet  brasileirao_2026_standings.parquet  brasileirao_2026_team_shooting.parquet  brasileirao_2026_team_standard.parquet  brasileirao_sofascore_xg_matches.parquet  brasileirao_sofascore_xg_players.parquet  sofascore_xg_matches.parquet  (+5 more)
reports/: brasileirao_fbref_exploracao.md
scripts/: backfill_momentum.py  build_brasileirao_sofascore_xg.py  build_sofascore_xg.py  discover_sofascore_brasileirao.py  sync_sofascore.py  sync_sofascore_brasileirao.py
sql/: sofascore_schema.sql  statsbomb_schema.sql
src/: fbref_extract.py
(+262 files in other folders)
